<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="bottom"
    tools:context="meme2lz.wumf.MainActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/statusBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">


        <Button
            android:id="@+id/btQTest"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="startRepeatingTimer"
            android:text="@string/btQTest"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btSettings"
            app:layout_constraintRight_toLeftOf="@+id/btAdd"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btSettings"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:elevation="0dp"
            android:text="@string/btSettings"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btAdd"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="2dp"
            android:elevation="0dp"
            android:onClick="showDateTimePicker"
            android:text="@string/btADD"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintVertical_bias="0.25" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/alarmList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toTopOf="@+id/statusBar"
        app:layout_constraintLeft_toRightOf="@+id/undone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintVertical_bias="0.7">
         

        <TextView
            android:id="@+id/txAlarmList"
            android:layout_width="150dp"
            android:layout_height="72dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/txAlarmList"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/undone"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/unreleased"
        app:layout_constraintBottom_toTopOf="@+id/statusBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btCancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:onClick="cancelRepeatingTimer"
            android:text="@string/btCancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tx3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="..."
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx2" />

        <TextView
            android:id="@+id/tx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="tomorrow"
            android:textAppearance="@style/TextAppearance.AppCompat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx1" />

        <TextView
            android:id="@+id/tx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Today"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="47dp" />

        <TextView
            android:id="@+id/txTillNext"
            android:layout_width="157dp"
            android:layout_height="31dp"
            android:text="Time till next"
            android:textAppearance="@style/TextAppearance.AppCompat"
            tools:layout_editor_absoluteX="0dp"
            app:layout_constraintBottom_toTopOf="@+id/tx1"
            android:layout_marginBottom="8dp" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
